--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,7 @@
         </form>
 
         <div class="footer">
-            
-           {{ result }}
+            {{title}}
             </div>
         </div>
     </main>
