--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+    <div class="db">Database Test: </bsr>
+        <p>Only for test purposes</p>
+        {{temp}}
+    </div>
     <main class="container">
-        <h2>Login</h2>
-        <form action="">
+        <h2>Login</h2>>
+        <form action="/loggedIn.html" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
                     placeholder="Enter Your Username">
@@ -20,12 +24,13 @@
                     placeholder="Enter Your Password">
                 <div class="underline"></div>
             </div>
-
             <input type="submit" value="Continue">
+            {% if error %}
+            <p>Incorrect username or password</p>
+          {% endif %}
         </form>
 
         <div class="footer">
-            {{title}}
             </div>
         </div>
     </main>
