Added a proxy and DNS server. Proxy can read and manipulate requests

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
     </div>
     <main class="container">
         <h2>Login</h2>>
-        <form action="/loggedIn.html" method="POST">
+        <form action="/index.html" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
                     placeholder="Enter Your Username">
@@ -25,9 +25,6 @@
                 <div class="underline"></div>
             </div>
             <input type="submit" value="Continue">
-            {% if error %}
-            <p>Incorrect username or password</p>
-          {% endif %}
         </form>
 
         <div class="footer">
