Attempt to create pop up window

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,5 +31,17 @@
             </div>
         </div>
     </main>
+    <script src="/static/checkProxy.js"></script>
+    <!--
+     <script>
+        // Check if the user is connected to the proxy server
+        var proxyServer = "http://192.168.178.56:8080";
+        if (window.location.hostname !== proxyServer) {
+          // If the user is not connected to the proxy server, display a pop-up message
+          window.alert("You must be connected to the proxy server to access this website.");
+          window.location.replace("http://192.168.178.56:5000/unauthorized");
+        }
+      </script>
+    -->
 </body>
 </html>
