--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Choice Form</title>
+    <title>Optionen</title>
   </head>
   <body>
-    <h1>Choose an option:</h1>
+    <h1>Wähle eine Option:</h1>
     <form method="POST" action="/redirect">
         <input type="radio" name="choice" value="index">Choice 1<br>
         <input type="radio" name="choice" value="secureIndex">Choice 2<br>
