--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -80,4 +80,9 @@ form input[type="submit"] {
     transition: all 0.3s ease;
 }
  
-/* Profile Page CSS Settings */
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
