http & https redirect impl, changes to html files

--- a/app/templates/securelogin.html
+++ b/app/templates/securelogin.html
@@ -10,7 +10,7 @@
     <div class="login">
     <main class="container">
         <h2>Login</h2>
-        <form action="/index.html" method="POST">
+        <form action="loginsecure" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
                     placeholder="Enter Your Username">
