--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,9 +12,9 @@
       <main class = "container">
         <h2>Informatik Projekt Demo</h2>
         <div class="center">
-        <li><a href="index.html">Login</a></li>
-        <li><a href="secureIndex.html">Website with Certificates</a></li>
-        <li><a href="transfer.html">Bank Transfer Demo</a></li>
+        <li><a href="login">Login</a></li>
+        <li><a href="loginsecure">Website with Certificates</a></li>
+        <li><a href="transfer">Bank Transfer Demo</a></li>
         <li><a href="schutz">Schutzmechanismen</a></li>
         <li><a href="arp">ARP Spoofing</a></li>
       </div>
