--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,17 +8,30 @@
     <title>Informatik Projekt Demo</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="home">Home</a></li>
+				<li><a href="about">About</a></li>
+				<li><a href="schutz">Schutzmechanismen</a></li>
+				<li><a href="">Test</a></li>
+        </ul>
+      </nav>
+    </header>
     <div class="login">
       <main class = "container">
         <h2>Informatik Projekt Demo</h2>
         <div class="center">
-        <li><a href="index.html">Login</a></li>
-        <li><a href="secureIndex.html">Website with Certificates</a></li>
-        <li><a href="transfer.html">Bank Transfer Demo</a></li>
+        <li><a href="index">Login</a></li>
+        <li><a href="secureIndex">Website with Certificates</a></li>
+        <li><a href="transfer">Bank Transfer Demo</a></li>
         <li><a href="schutz">Schutzmechanismen</a></li>
         <li><a href="arp">ARP Spoofing</a></li>
       </div>
     </div>
   </main>
+  <div class = "footer">
+    Footer - 2023 - Informatik Projekt - Creative Commons License
+    </div>  
   </body>
 </html>
