moved config, html changes, schutz page
moved config to seperate file, updated schutz page, added new table admins, user credentials stored in Database

--- a/app/static/css/transfer.css
+++ b/app/static/css/transfer.css
@@ -79,5 +79,37 @@ form input[type="submit"] {
     border-radius: 4px;
     transition: all 0.3s ease;
 }
- 
-/* Profile Page CSS Settings */
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #030303;
+  }
+  nav ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  nav ul li {
+    display: inline-block;
+    padding: 0 5px; 
+  }
+  nav ul li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #f7f1f1;
+  }
