--- a/app/templates/schutz.html
+++ b/app/templates/schutz.html
@@ -7,8 +7,57 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body> 
+    <header>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+				<li><a href="about">About</a></li>
+				<li><a href="schutz">Schutzmechanismen</a></li>
+				<li><a href="">Test</a></li>
+          </ul>
+        </nav>
+      </header>
     <h1> Schutzmechanismen</h1>
-    <p> Hier werden wir die Schutmechanisem von Entwickler und Benutzer Prespektive erklären</p>
+    <p> Hier werden wir die Schutmechanisem von Entwickler und Benutzer Prespektive erklären. <br> Was der Entwickler tun kann um die Angriffe möglichst 
+        effektiv zu verhindern <br> und was der Benutzer machen kann um sich zu schützen</p>
+    <main>
+        <div class="tab">
+            <button class="tablinks" onclick="openTab(event, 'Tab1')">Entwickler Perspektive</button>
+            <button class="tablinks" onclick="openTab(event, 'Tab2')">Benutzer Perspektive</button>
+          </div>
+      
+          <div id="Tab1" class="tabcontent">
+            <h3>Entwickler Perspektive</h3>
+            <p>Der Entwickler kann folgendes tun um die Seite sicherer zu gestalten</p>
+            <li> Punkt 1</li>
+            <li> Punkt 2</li>
+          </div>
+      
+          <div id="Tab2" class="tabcontent">
+            <h3>Benutzer Perspektive</h3>
+            <p>Der Benutzer kann folgendes tun um sich vor Angriffe zu schützen</p>
+            <li> Punkt 1</li>
+            <li> Punkt 2</li>
+          </div>
+          <script>
+            function openTab(evt, tabName) {
+              var i, tabcontent, tablinks;
 
+              tabcontent = document.getElementsByClassName("tabcontent");
+              for (i = 0; i < tabcontent.length; i++) {
+                tabcontent[i].style.display = "none";
+              }
+
+              tablinks = document.getElementsByClassName("tablinks");
+              for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace("active") }
+                document.getElementById(tabName).style.display = "block";
+                evt.currentTarget.className += " active";
+                }
+            </script>
+    </main>
+    <div class = "footer">
+        Footer - 2023 - Informatik Projekt - Creative Commons License
+        </div>
     </body>
 </html>
