js function for tabs, delete dns

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,3 @@
-<!--Abfrage ob secure-website oder nicht -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -18,6 +17,12 @@
         </ul>
       </nav>
     </header>
+    <div class ="login"> 
+      <main class = "container">
+        <h2>Informatik Projekt Demo</h2>
+      <div class ="center"> test </div>
+      </main>
+    </div>
     <div class="login">
       <main class = "container">
         <h2>Informatik Projekt Demo</h2>
