--- a/app/templates/schutz.html
+++ b/app/templates/schutz.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="{{ url_for('static', filename='js/tabs.js')}}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+  </head>
 <body> 
     <header>
         <nav>
@@ -39,22 +40,6 @@
             <li> Punkt 1</li>
             <li> Punkt 2</li>
           </div>
-          <script>
-            function openTab(evt, tabName) {
-              var i, tabcontent, tablinks;
-
-              tabcontent = document.getElementsByClassName("tabcontent");
-              for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
-              }
-
-              tablinks = document.getElementsByClassName("tablinks");
-              for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace("active") }
-                document.getElementById(tabName).style.display = "block";
-                evt.currentTarget.className += " active";
-                }
-            </script>
     </main>
     <div class = "footer">
         Footer - 2023 - Informatik Projekt - Creative Commons License
