--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,27 +14,41 @@
 				<li><a href="about">About</a></li>
 				<li><a href="schutz">Schutzmechanismen</a></li>
 				<li><a href="">Test</a></li>
+        <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
         </ul>
       </nav>
     </header>
-    <div class ="login"> 
-      <main class = "container">
-        <h2>Informatik Projekt Demo</h2>
-      <div class ="center"> test </div>
-      </main>
-    </div>
-    <div class="login">
-      <main class = "container">
-        <h2>Informatik Projekt Demo</h2>
-        <div class="center">
-        <li><a href="login">Login</a></li>
-        <li><a href="loginsecure">Website with Certificates</a></li>
-        <li><a href="transfer">Bank Transfer Demo</a></li>
-        <li><a href="schutz">Schutzmechanismen</a></li>
-        <li><a href="arp">ARP Spoofing</a></li>
+     </div>
+    <div class="container-c">
+      <h1>Informatik Projekt Demo</h1>
+      <p> Welcome to our Demo where we will be presenting different types of Man in the Middle Attacks and
+        also demonstrate the different mechanisms on how you can protect yourself against such attacks
+      </p>
+      <div class="center">
+        <div class="box">
+          <h2>Proxy Server </h2>
+          <li><a href="proxy">Proxy Server</a></li>
+          <li><a href="login">Login</a></li>
+          <li><a href="loginsecure">Website with Certificates</a></li>
+          <li><a href="transfer">Bank Transfer Demo</a></li>
+        </div>
+        <div class="box">
+          <h2>ARP Spoofing </h2>
+          <li><a href="arp">ARP Spoofing</a></li>
+          <li><a href="arp">ARP Demo</a></li>
+          
+        </div>
+        <div class="box">
+          <h2>Schutzmechanismen</h2>
+          <li><a href="schutz">Schutzmechanismen</a></li>
+          All about Schutz!!
+        </div>
+        <div class="box">
+          <h2>DNS Spoofing</h2>
+          <li><a href="schutz">DNS Demo</a></li>
+        </div>
       </div>
     </div>
-  </main>
   <div class = "footer">
     Footer - 2023 - Informatik Projekt - Creative Commons License
     </div>  
