--- a/app/templates/securelogin.html
+++ b/app/templates/securelogin.html
@@ -10,10 +10,11 @@
     <header>
         <nav>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="about">About</a></li>
             <li><a href="schutz">Schutzmechanismen</a></li>
             <li><a href="">Test</a></li>
+            <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
           </ul>
         </nav>
       </header>
