--- a/app/templates/transfer.html
+++ b/app/templates/transfer.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/transfer.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Überweisung</title>
 	<body>
 		<header>
 			<nav>
 			  <ul>
-				<li><a href="">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li><a href="schutz">Schutzmechanismen</a></li>
 				<li><a href="">Test</a></li>
+				<li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
 			  </ul>
 			</nav>
 		  </header>
