Added html-pages, changes to app.

--- a/app/templates/arp.html
+++ b/app/templates/arp.html
@@ -20,21 +20,13 @@
     </header>
      </div>
      <div class="container-c">
-        <h1>Proxy Server Szenario</h1>
-        <p> Was ist ein Proxy Server?
-        </p>
-        <p> Warum haben wir einen benutzt?</p>
-        <p>Was wollen wir damit Zeigen?</p>
-        <p>Anleitung für Szenario</p>
-
-        <div class="center">
-          <div class="box">
-            <h2>Szenario Links </h2>
-            <li><a href="login">Login mit Http</a></li>
-            <li><a href="loginsecure">Login mit Https</a></li>
-          </div>
+        <h1>ARP Cache Poisoning</h1>
+        <p> Was ist der Angriff?</p>
+        <p> Ziel des Angriffs</p>
+        <p> Anleitung und Vorraussetzung</p>
+     </div>
         <div class = "footer">
             Footer - 2023 - Informatik Projekt - Creative Commons License
             </div>  
-          </body>
-        </html>
+    </body>
+  </html>
