--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,29 +24,25 @@
       <p> Welcome to our Demo where we will be presenting different types of Man in the Middle Attacks and
         also demonstrate the different mechanisms on how you can protect yourself against such attacks
       </p>
+      <h1>Ablauf der Demo</h1>
+      <p> testing 
+      </p>
+
       <div class="center">
         <div class="box">
-          <h2>Proxy Server </h2>
-          <li><a href="proxy">Proxy Server</a></li>
-          <li><a href="login">Login</a></li>
-          <li><a href="loginsecure">Website with Certificates</a></li>
-          <li><a href="transfer">Bank Transfer Demo</a></li>
-        </div>
-        <div class="box">
-          <h2>ARP Spoofing </h2>
-          <li><a href="arp">ARP Spoofing</a></li>
-          <li><a href="arp">ARP Demo</a></li>
-          
-        </div>
-        <div class="box">
-          <h2>Schutzmechanismen</h2>
+          <h2>Informationen </h2>
+          <li><a href="general">Erklärung: Man in the Middle</a></li>
           <li><a href="schutz">Schutzmechanismen</a></li>
-          All about Schutz!!
+          <li><a href="tools">Tools</a></li>
         </div>
+      
         <div class="box">
-          <h2>DNS Spoofing</h2>
-          <li><a href="schutz">DNS Demo</a></li>
+          <h2>Szenarios</h2>
+          <li><a href="proxy">Proxy Szenario</a></li>
+          <li><a href="arp">ARP Cache Poisoning</a></li>
+          <li><a href="">3 Demo</a></li>
         </div>
+
       </div>
     </div>
   <div class = "footer">
