--- a/app/templates/schutz.html
+++ b/app/templates/schutz.html
@@ -42,6 +42,9 @@
             <li> Punkt 2</li>
           </div>
     </main>
+    <h1> Weitere Schutzmechanismen </h1>
+    <p>test</p>
+    <h1>Zertifikate</h1>
     <div class = "footer">
         Footer - 2023 - Informatik Projekt - Creative Commons License
         </div>
