--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -20,21 +20,11 @@
     </header>
      </div>
      <div class="container-c">
-        <h1>Proxy Server Szenario</h1>
-        <p> Was ist ein Proxy Server?
-        </p>
-        <p> Warum haben wir einen benutzt?</p>
-        <p>Was wollen wir damit Zeigen?</p>
-        <p>Anleitung für Szenario</p>
-
-        <div class="center">
-          <div class="box">
-            <h2>Szenario Links </h2>
-            <li><a href="login">Login mit Http</a></li>
-            <li><a href="loginsecure">Login mit Https</a></li>
-          </div>
+        <h1>Übersicht der verwendeten Tools</h1>
+        <p> Jeweiligen Tools auflisten und erklären. Warum haben wir diese eingesetzt?</p>
+     </div>
         <div class = "footer">
             Footer - 2023 - Informatik Projekt - Creative Commons License
             </div>  
-          </body>
-        </html>
+    </body>
+  </html>
