Text added to pages

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,11 +21,28 @@
      </div>
     <div class="container-c">
       <h1>Informatik Projekt Demo</h1>
-      <p> Welcome to our Demo where we will be presenting different types of Man in the Middle Attacks and
-        also demonstrate the different mechanisms on how you can protect yourself against such attacks
+      <p> Willkommen auf unserer Website zu Man-in-the-Middle-Angriffen. Wir haben in unserem Semesterprojekt 
+        eine interaktive Demonstration erstellt, die Ihnen die Möglichkeit bietet, drei verschiedene Angriffsszenarien 
+        auszuprobieren. Die Demonstration ist ein praxisorientiertes Produkt, das Ihnen ein besseres Verständnis der Bedrohungen 
+        durch Man-in-the-Middle-Angriffe vermitteln soll. 
+        <br><br>
+        Auf unserer Webseite stehen ausführliche Anleitungen zu den Szenarien und Informationen über die Tools zur 
+        Verfügung, die wir bei der Erstellung unseres Projekts eingesetzt haben. Wir haben uns bemüht, eine benutzerfreundliche 
+        Oberfläche zu gestalten, um auch unerfahrenen Anwendern die Möglichkeit zu geben, die Demonstration auszuprobieren und mehr 
+        über das Thema zu erfahren. Zusätzlich finden Sie Informationen über Maßnahmen zur Absicherung gegen 
+        Man-in-the-Middle-Angriffe.
       </p>
-      <h1>Ablauf der Demo</h1>
-      <p> testing 
+      <h1>Vorraussetzung</h1>
+      <p> 
+        Um die Szenarien nutzen zu können, müssen folgende Tools installiert sein:
+         <br>
+         Virtual Box
+         <br>
+         Wireshark
+         <br>
+         Weiter Tools hinzufügen!
+         <br>
+         Weitere Informationen zu den jeweiligen Tools finden Sie unter Information "Tools".
       </p>
 
       <div class="center">
