--- a/app/templates/proxy.html
+++ b/app/templates/proxy.html
@@ -21,11 +21,60 @@
      </div>
      <div class="container-c">
         <h1>Proxy Server Szenario</h1>
-        <p> Was ist ein Proxy Server?
+        <h2> Was ist ein Proxy Server?
+        </h2>
+        <br>
+        <p> Ein Proxy-Server ist ein Server, der als Mittelsmann fungiert, um Anfragen von Clients an 
+          andere Server weiterzuleiten. <br> 
+          Es handelt sich hierbei um einen Server, der Anfragen für Inhalte, die über das Internet abgerufen werden sollen, entgegennimmt und weiterleitet. 
+          Die meisten Benutzer nutzen Proxy-Server, um ihre IP-Adresse zu verbergen und ihre Online-Aktivitäten zu schützen. 
+          Es kann jedoch auch andere Gründe geben, warum Benutzer einen Proxy-Server verwenden, wie zum Beispiel den Zugriff auf 
+          Inhalte, die aufgrund geografischer oder anderer Einschränkungen sonst nicht zugänglich wären.<br>
+          Ein weiterer wichtiger Einsatzbereich von Proxy-Servern besteht darin, den Netzwerkverkehr zu überwachen und zu steuern. 
+          Durch die Verwendung eines Proxy-Servers können IT-Administratoren sicherstellen, dass keine unerwünschten Inhalte über 
+          das Netzwerk geladen werden und dass die Netzwerkleistung und -sicherheit optimiert werden. Darüber hinaus können 
+          Proxy-Server verwendet werden, um Daten zu komprimieren, Caching zu implementieren und die Authentifizierung und 
+          Autorisierung von Benutzern zu verwalten.
+          <br>
+          Es gibt verschiedene Arten von Proxy-Servern, wie z.B. transparente Proxys, anonyme Proxys und distribuierte Proxys. 
+          Jede Art von Proxy-Server hat ihre eigenen Vor- und Nachteile und es ist wichtig, die richtige Art für die jeweiligen 
+          Anforderungen auszuwählen.
         </p>
-        <p> Warum haben wir einen benutzt?</p>
-        <p>Was wollen wir damit Zeigen?</p>
-        <p>Anleitung für Szenario</p>
+        <h2> Warum haben wir einen benutzt?</h2>
+        <br>
+        <p>Wir haben uns entschieden, einen Proxy-Server in unserem Szenario zu verwenden, da er uns die Möglichkeit bot, 
+          die Netzwerkkommunikation eines Benutzers zu überwachen und zu manipulieren. 
+          In unserem Fall war es wichtig, die POST- und GET-Anfragen des Benutzers abzufangen und zu verändern, 
+          um einen Man-in-the-Middle-Angriff durchzuführen.
+          <br>
+          Ein Proxy-Server fungiert als Vermittler zwischen dem Benutzer und dem ??, indem er Anfragen für Inhalte, 
+          die über das ?? abgerufen werden sollen, entgegennimmt und weiterleitet. 
+          Daher konnten wir durch die Verwendung eines Proxy-Servers die Netzwerkkommunikation des Benutzers 
+          überwachen und seine Anfragen abfangen, um sie zu manipulieren.
+          <br>
+          Darüber hinaus konnten wir durch die Verwendung eines Proxy-Servers auch sicherstellen, dass alle Daten, die zwischen 
+          dem Benutzer und dem ?? ausgetauscht werden, über den Proxy-Server laufen und somit für uns zugänglich sind. 
+          Dadurch konnten wir die Daten des Benutzers auf geeignete Weise verändern, 
+          um den Man-in-the-Middle-Angriff auszuführen.
+        </p>
+        <h2>Was wollen wir damit Zeigen?</h2>
+        <br>
+        <p>Mit unserem Szenario, bei dem wir einen Proxy-Server verwendet haben, zeigen wir auf, wie gefährlich ein 
+          Man-in-the-Middle-Angriff sein kann. Durch die Modifizierung der POST requests wird die Integrität verletzt, was zeigt, 
+          wie einfach es für einen Angreifer ist, die Netzwerkkommunikation eines Benutzers abzufangen und zu manipulieren. 
+          Wir wollen damit auf die Bedeutung von Informationssicherheit hinweisen und zeigen, wie wichtig es ist, sich gegen 
+          solche Angriffe zu schützen.
+          <br>
+          Unser Ziel ist es, Benutzern und Unternehmen zu verdeutlichen, dass Informationssicherheit eine entscheidende Rolle spielt,
+          um sicherzustellen, dass ihre Daten und ihre Kommunikation geschützt bleiben.
+          <br> 
+          Durch die Demonstration unseres Projekts hoffen wir, dass Benutzer und Unternehmen die Notwendigkeit von Schutzmechanismen 
+          erkennen und ihre Informationssicherheit entsprechend anpassen. <!--Kp ob der letzte Teil reinpasst-->
+        </p>
+        <br>
+        <h2>Anleitung für das Szenario</h2>
+        <br>
+        <p>Wichtig am besten mit firefox</p>
 
         <div class="center">
           <div class="box">
