--- a/app/templates/schutz.html
+++ b/app/templates/schutz.html
@@ -45,6 +45,9 @@
     <h1> Weitere Schutzmechanismen </h1>
     <p>test</p>
     <h1>Zertifikate</h1>
+    <p>
+      Work in progress
+    </p>
     <div class = "footer">
         Footer - 2023 - Informatik Projekt - Creative Commons License
         </div>
