--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -22,6 +22,85 @@
      <div class="container-c">
         <h1>Übersicht der verwendeten Tools</h1>
         <p> Jeweiligen Tools auflisten und erklären. Warum haben wir diese eingesetzt?</p>
+
+        <p>ettercap,  </p>
+
+        <h2>Docker</h2>
+        <br>
+        <p>
+          Docker ist eine Plattform für die Verwaltung von Anwendungen in Containern. Containervirtualisierung ermöglicht es, 
+          Anwendungen und deren Abhängigkeiten in einer einheitlichen Umgebung bereitzustellen, unabhängig von der tatsächlichen 
+          Hardware oder Betriebssystemumgebung. Dies führt zu einer höheren Portabilität, Reproduzierbarkeit und Flexibilität von 
+          Anwendungen.
+          <br>
+          
+          Docker-Images sind das grundlegende Bauelement von Docker. Sie enthalten alle notwendigen Dateien, Konfigurationen und 
+          Systemressourcen, um eine Anwendung auszuführen. Docker-Images werden auf einem Hostcomputer bereitgestellt und können 
+          dann auf jedem anderen Computer ausgeführt werden, der Docker installiert hat.
+          <br>
+
+          Docker-Compose ist ein Werkzeug zur Verwaltung von Multi-Container-Anwendungen. Mit Docker-Compose können Sie mehrere 
+          Container als eine einzige Anwendung definieren und verwalten. Eine Docker-Compose-Datei beschreibt die Container, 
+          die benötigt werden, um eine Anwendung auszuführen, sowie deren Netzwerkkonfiguration und Abhängigkeiten.
+          <br>
+
+          Docker-Compose ermöglicht es Entwicklern, eine vollständige Anwendungsumgebung mit einem einfachen Befehl zu starten, 
+          zu ändern und zu beenden. Es vereinfacht die Übertragung von Anwendungen zwischen Entwicklung, Testumgebungen.
+
+          <br>
+          Zusammen bieten Docker und Docker-Compose eine einfache und flexible Lösung für die Bereitstellung und Verwaltung von 
+          Anwendungen. Dies hat sich zu einem Standard in der modernen Softwareentwicklung entwickelt und wird von einer wachsenden 
+          Anzahl von Unternehmen und Organisationen weltweit eingesetzt.
+        </p>
+
+        <h2>Virtual Box</h2>
+        <br>
+        <p>
+          VirtualBox ist eine Virtualisierungsplattform, die es ermöglicht, mehrere Betriebssysteme und Anwendungen auf einem 
+          einzigen Computer auszuführen. Es wurde von Oracle entwickelt und ist eine Open-Source-Software.
+          <br>
+          Mit VirtualBox können Benutzer mehrere virtuelle Maschinen erstellen, jede mit ihrem eigenen Betriebssystem und 
+          Anwendungen. Dies ermöglicht es Benutzern, mehrere Betriebssysteme auf einem einzigen Computer zu testen und auszuführen, 
+          ohne dass sie ihr tatsächliches Betriebssystem beeinträchtigen.
+        </p>
+
+        <h2>Wireshark</h2>
+        <br>
+        <p>
+          Wireshark ist ein Netzwerk-Protokollanalysator, der es Netzwerkadministratoren und Entwicklern ermöglicht, Datenverkehr 
+          im Detail zu untersuchen. Es wurde ursprünglich als freie und Open-Source-Software entwickelt.
+          <br>
+          Wireshark bietet eine umfassende Überwachung und Analyse des Netzwerkverkehrs. Es unterstützt eine Vielzahl von 
+          Protokollen und bietet tiefgreifende Einblicke in die Netzwerkkommunikation, einschließlich Header-Informationen, 
+          Dateninhalte und Fehlerdiagnose.
+          <br>
+          Eine der Stärken von Wireshark ist die Fähigkeit, Netzwerkverkehr in Echtzeit zu überwachen und zu analysieren. 
+          Es kann auch aufgezeichneten Verkehr von Capture-Dateien analysieren, was es zu einem wertvollen Werkzeug für 
+          Netzwerkadministratoren und Entwickler macht, die Fehler in Netzwerkanwendungen und Protokollen suchen.
+          <br>
+          Wireshark bietet auch eine intuitive Benutzeroberfläche mit einer Vielzahl von Filteroptionen, die es Benutzern 
+          ermöglichen, relevante Daten schnell zu finden. Es kann auch mit anderen Netzwerkanalysewerkzeugen integriert werden, 
+          um eine umfassende Überwachung und Analyse des Netzwerkverkehrs zu ermöglichen.
+        </p>
+
+        <h2>Ettercap</h2>
+        <br>
+        <p>
+          Ettercap ist ein integriertes Sicherheitswerkzeug, das für das Mitlesen von Netzwerkkommunikation und das Durchführen 
+          von Man-in-the-Middle-Angriffen (MITM) entwickelt wurde. Es ist eine Open-Source-Software und wurde für die Verwendung 
+          unter Linux und anderen Unix-basierten Betriebssystemen entwickelt.
+          <br>
+          Ettercap verwendet ARP-Spoofing-Techniken, um Datenverkehr zwischen zwei Netzwerkgeräten abzufangen und zu überwachen. 
+          Es kann auch spezifische Protokolle, wie HTTP oder SMTP, untersuchen und modifizieren.
+          <br>
+          Ettercap ist ein leistungsstarkes Werkzeug für Penetrationstester und Netzwerkadministratoren, die potenzielle 
+          Sicherheitsprobleme in ihren Netzwerken identifizieren möchten. Es kann auch verwendet werden, um 
+          Netzwerksicherheitsmaßnahmen zu evaluieren und zu verbessern.
+          <br>
+          Allerdings sollte es beachtet werden, dass Ettercap für illegalen Zwecken missbraucht werden kann. Daher sollten Benutzer 
+          sicherstellen, dass sie die entsprechenden rechtlichen und ethischen Richtlinien einhalten, wenn sie Ettercap verwenden.
+        </p>
+
      </div>
         <div class = "footer">
             Footer - 2023 - Informatik Projekt - Creative Commons License
