--- a/app/templates/general.html
+++ b/app/templates/general.html
@@ -21,7 +21,13 @@
      </div>
      <div class="container-c">
         <h1>Was sind Man in the middle Attacken?</h1>
-        <p> Generelle Infos mitm text erstellen</p>
+        <p>Ein Man-in-the-Middle-Angriff (MITM) ist eine Art von Cyber-Sicherheitsbedrohung, bei der ein Angreifer eine 
+          aktive Rolle in der Kommunikation zwischen zwei Parteien spielt. Die Idee dahinter ist, dass der Angreifer die 
+          Übertragung von Informationen abfängt, ändert und an den Empfänger weiterleitet, ohne dass die betroffene Partei 
+          davon weiß. Dies kann dazu führen, dass vertrauliche Daten gestohlen oder unabsichtlich verändert werden, was zu 
+          ernsthaften Folgen für die Betroffenen haben kann. Es ist wichtig zu verstehen, wie Man-in-the-Middle-Angriffe 
+          funktionieren und wie man sich davor schützen kann, um die eigene Sicherheit im Cyberspace zu gewährleisten.
+        </p>
      </div>
         <div class = "footer">
             Footer - 2023 - Informatik Projekt - Creative Commons License
