--- a/app/templates/proxy.html
+++ b/app/templates/proxy.html
@@ -67,9 +67,12 @@
           <br>
           Unser Ziel ist es, Benutzern und Unternehmen zu verdeutlichen, dass Informationssicherheit eine entscheidende Rolle spielt,
           um sicherzustellen, dass ihre Daten und ihre Kommunikation geschützt bleiben.
-          <br> 
-          Durch die Demonstration unseres Projekts hoffen wir, dass Benutzer und Unternehmen die Notwendigkeit von Schutzmechanismen 
-          erkennen und ihre Informationssicherheit entsprechend anpassen. <!--Kp ob der letzte Teil reinpasst-->
+        </p>
+        <br>
+        <h2>Warum sind Zertifikate wichtig ?</h2>
+        <br>
+        <p>
+          Erklären warum wichtig für unser Szenario --Weiterleitung zu Zertifikate erstellen (Weitere HTML Page? Oder weiter unten auf dieser Seite?)
         </p>
         <br>
         <h2>Anleitung für das Szenario</h2>
