--- a/app/templates/schutz.html
+++ b/app/templates/schutz.html
@@ -30,23 +30,39 @@
       
           <div id="Tab1" class="tabcontent">
             <h3>Entwickler Perspektive</h3>
-            <p>Der Entwickler kann folgendes tun um die Seite sicherer zu gestalten</p>
-            <li> Punkt 1</li>
-            <li> Punkt 2</li>
+            <p>Der Entwickler kann folgende Mechanismen einbauen, um die Sicherheit zu erhöhen</p>
+            <li> Überprüfung von Eingabedaten</li>
+            <li> Rechteverwaltung</li>
+            <li> Authentifizierung</li>
+            <li> Verschlüsselung</li>
           </div>
       
           <div id="Tab2" class="tabcontent">
             <h3>Benutzer Perspektive</h3>
-            <p>Der Benutzer kann folgendes tun um sich vor Angriffe zu schützen</p>
-            <li> Punkt 1</li>
-            <li> Punkt 2</li>
+            <p>Der Benutzer kann folgendes tun um die Authentizität einer Webseite zu prüfen</p>
+            <li> Verschlüsselte Verbindung durch Zertifikate (Weiter unten genauer drauf eingegangen</li>
+            <li> Malware (Andere Überschrift geben)</li>
+            <li> Impressum / Datenschutzrichtlinie</li>
           </div>
     </main>
     <h1> Weitere Schutzmechanismen </h1>
     <p>test</p>
-    <h1>Zertifikate</h1>
+    <h1>SSL-Zertifikate</h1>
+    <br>
     <p>
-      Work in progress
+      SSL-Zertifikate (Secure Socket Layer) sind digitale Zertifikate, die es einer Website ermöglichen, eine sichere Verbindung 
+      mit dem Webbrowser ihres Benutzers aufzubauen. Sie werden hauptsächlich verwendet, um die Übertragung vertraulicher 
+      Informationen wie Kreditkartendaten oder persönliche Daten zu schützen.
+      <br>
+      Ein SSL-Zertifikat besteht aus einem öffentlichen Schlüssel, einem privaten Schlüssel und einer Reihe von Informationen 
+      über die Website und ihren Betreiber. Es wird von einer vertrauenswürdigen Zertifizierungsstelle ausgestellt, die die 
+      Identität der Website und ihres Betreibers überprüft hat.
+      <br>
+      Wenn eine Website ein gültiges SSL-Zertifikat verwendet, wird bei jeder Übertragung von Daten zwischen dem Benutzer 
+      und der Website eine verschlüsselte Verbindung hergestellt. Diese verschlüsselte Verbindung schützt die Übertragung 
+      von Daten vor Lauschangriffen und anderen Bedrohungen.
+      <br><br>
+      <!--Vielleicht ein link zu Wie erstellt man SSL Zertifikate?-->
     </p>
     <div class = "footer">
         Footer - 2023 - Informatik Projekt - Creative Commons License
