--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -21,10 +21,7 @@
      </div>
      <div class="container-c">
         <h1>Übersicht der verwendeten Tools</h1>
-        <p> Jeweiligen Tools auflisten und erklären. Warum haben wir diese eingesetzt?</p>
-
-        <p>ettercap,  </p>
-
+        <br>
         <h2>Docker</h2>
         <br>
         <p>
@@ -101,6 +98,18 @@
           sicherstellen, dass sie die entsprechenden rechtlichen und ethischen Richtlinien einhalten, wenn sie Ettercap verwenden.
         </p>
 
+        <h2>OpenSSL</h2>
+        <br>
+        <p>
+          OpenSSL ist ein leistungsstarkes Tool, das Entwicklern ermöglicht, verschlüsselte Kommunikation zu implementieren, 
+          indem es die Übertragung von Daten sichert und authentifiziert. Dies wird durch die Verwendung von Kryptografie und 
+          Zertifikaten erreicht, die von OpenSSL generiert und verwaltet werden können.
+          <br>
+          Mit OpenSSL können Entwickler auch eigene Zertifizierungsstellen (CA) erstellen, die eigene Zertifikate ausstellen können. 
+          Dies ist hilfreich, wenn keine externe Zertifizierungsstelle verfügbar oder bezahlbar ist. Self-signed Zertifikate, die 
+          von OpenSSL erstellt werden, sind jedoch nicht von allen Browsern und Betriebssystemen als vertrauenswürdig anerkannt, 
+          daher müssen Benutzer möglicherweise eine Ausnahme hinzufügen, um die Verbindung herzustellen.  
+        </p>
      </div>
         <div class = "footer">
             Footer - 2023 - Informatik Projekt - Creative Commons License
